--- a/HostnameService/NamingService/Web.config
+++ b/HostnameService/NamingService/Web.config
@@ -10,6 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-NamingService-20170821013717.mdf;Initial Catalog=aspnet-NamingService-20170821013717;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="NameGeneratorEntities" connectionString="metadata=res://*/Models.NameGenerator.csdl|res://*/Models.NameGenerator.ssdl|res://*/Models.NameGenerator.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=NameGenerator;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings></appSettings>
   <system.web>
